# binance-engine

./: .env.example  .gitignore  Cargo.toml  Procfile  README.md  rust-toolchain.toml
alpaca_dreamrunner/: Cargo.toml
binance_dreamrunner/: Cargo.toml
binance_dreamrunner/src/: dreamrunner.rs  engine.rs  kagi.rs  main.rs  utils.rs
binance_lib/: Cargo.toml
binance_lib/src/: account.rs  errors.rs  model.rs  userstream.rs  websocket.rs
binance_lib/src/builder/: account_info.rs  trade.rs
binance_server/: Cargo.toml
binance_server/src/: main.rs
dreamrunner/: Cargo.toml  btcusdt_30m.csv  ethusdt_30m.csv  solusdt_15m.csv  solusdt_30m.csv
dreamrunner/src/: backtest.rs  dreamrunner.rs  engine.rs  main.rs  utils.rs
lib/: Cargo.toml
lib/src/: account.rs  alert.rs  client.rs  errors.rs  interval.rs  lib.rs  model.rs  trade.rs  traits.rs  userstream.rs  websocket.rs
lib/src/builder/: account_info.rs  klines.rs  mod.rs  trade.rs
playbook/: Cargo.toml  atlasusd_1h.csv  btcusd_1d.csv  btcusdc_1h.csv  btcusdt_30m.csv  ethusd_1d.csv  ethusdt_30m.csv  solusdt_30m.csv
playbook/src/: backtest.rs  lib.rs  strategy.rs
playbook/src/strategies/: dreamrunner.rs  half_life.rs  mod.rs  stat_arb.rs  zebra.rs
relay/: Cargo.toml
relay/src/: alert.rs  engine.rs  main.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs  plot.rs
time_series/: Cargo.toml
time_series/src/: backtest.rs  candle.rs  candle_cache.rs  data.rs  data_cache.rs  dataframe.rs  dreamrunner.rs  generic_cache.rs  hda.rs  hurst.rs  kagi.rs  lib.rs  pfs.rs  plot.rs  precise_round.rs  rolling_candles.rs  square_of_nine.rs  time.rs  trade.rs
