[workspace]
members = [
    "time_series",
    "binance_dreamrunner",
    "binance_lib",
    "binance_server",
]

[workspace.package]
version = "0.3.0"
authors = ["Lunar Engine <drew@lunarengine.xyz>"]
repository = "https://github.com/LunarEngine/lunar_engine"
homepage = "https://lunarengine.xyz/"
license = "Apache-2.0"
edition = "2021"