[workspace]
resolver = "2"
members = [
    "time_series",
    "dreamrunner",
    "lib",
    "server",
    "relay"
]

[workspace.package]
version = "0.3.0"
authors = ["Drew <drew@epoch.fm>"]
repository = "https://github.com/cosmic-lab-inc/lunar-engine"
homepage = "https://epoch.fm"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
actix-web = "4"
anyhow = "1.0.75"
chrono = "0.4.22"
tokio = { version = "1.24.2", features = ["full"] }
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
thiserror = "1.0.39"
time = "0.3.14"
dotenv = "0.15.0"
futures = "0.3.24"
log = "0.4"
simplelog = "0.12.0"
tungstenite = { version = "0.18.0", features = ["native-tls"] }
error-chain = { version = "0.12.4", default-features = false }
hmac = "0.12.1"
regex = "1.7.3"
hex = "0.4"
sha2 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2.2.2"
plotters = { version = "0.3.5", features = ["default"] }