[package]
name = "lib"
version = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
crossbeam = "0.8.2"
error-chain = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
simplelog = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
time_series = { path = "../time_series" }
tokio = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }
