[package]
name = "relay"
version = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
actix-web-httpauth = "0.8.1"
anyhow = { workspace = true }
chrono = { workspace = true }
crossbeam = "0.8.2"
dotenv = { workspace = true }
lib = { path = "../lib" }
log = { workspace = true }
serde = { workspace = true }
simplelog = { workspace = true }
time = { workspace = true }
time_series = { path = "../time_series" }
tokio = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
