[package]
name = "time_series"
version = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
# external deps
csv = "1.1.6"
linreg = "0.2.0"
log = { workspace = true }
num-decimal = { version = "0.2.4", default-features = false, features = ["num-v04", "serde"] }
plotters = "0.3.4"
rayon = "1.5.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
