[package]
name = "time_series"
version = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
linreg = "0.2.0"
log = { workspace = true }
num-decimal = { version = "0.2.4", default-features = false, features = ["num-v04", "serde"] }
plotters = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
simplelog = { workspace = true }
rand = "0.8.5"

[dev-dependencies]
futures = { workspace = true }
